# kantor

./: Dockerfile  Jenkinsfile  LICENSE  README.md  create_packages.sh  docker-compose.yml  test_trial_file.py  trial_file.py
app/: create_react_package.sh  package-lock.json  package.json  requirements.txt  tailwind.config.js
app/public/: index.html
app/src/: App.js  App.jsx  ClientToken.js  index.js  index.jsx
app/src/components/: AddNewWallet.jsx  AllOffersTable.jsx  Calculator.jsx  CreateOfferForm.jsx  CurrencyCharts.jsx  DialogMatches.jsx  FastApiTest.jsx  Header.js  LoginButton.js  LoginForm.js  LoginForm.jsx  MyOffersTable.jsx  OffersTable.jsx  RegistrationButton.js  RegistrationButton.jsx  RegistrationForm.js  RegistrationForm.jsx  SelectCurrency.jsx  Sidebar.jsx  TransactionsTable.jsx  UserData.jsx  WalletMoneyDeposit.jsx  WalletMoneySubtract.jsx  Wallets.jsx  table-utils.jsx
app/src/functions/: getCurrencies.jsx
app/src/styles/: globals.css  headerStyles.css  homeStyles.css  loginStyles.css  userStyles.css
app/src/views/: AllOffers.jsx  CreateOffer.jsx  (+10 more)
backend/: LICENSE  README.md  create_python_package.sh  pyproject.toml
backend/app/: api.py
backend/src/backend/: .gitignore  Dockerfile  api.py  create_python_package.sh  database.py  db_config.py  requirements.txt  test.py
bot/: api.py  api1.py  main.py
mock-api/: db.mjs  index.mjs  package.json
mock-api/routes/: currencies.mjs  user-offers.mjs  user-transactions.mjs
sql/: create_table.sql  inserts.sql  match_offer.sql  uncompleted_offers.sql  user_login.sql  user_registration.sql
